Backport of v5.0